[project]
name = "xai-memu"
version = "0.1.0"
description = "A Xircuits component library for interacting with MemU"
authors = [{ name = "Eduardo Gonzalez", email = "egonzalez@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xpressai/xai-memu"
keywords = ["xircuits", "memu"]

# Xircuits-specific configurations
[tool.xircuits]
requirements_path = "requirements.txt"
